--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -6421,6 +6421,8 @@ label.panel-block {
 
 .is-link {
   cursor: pointer; }
+  .is-link:hover {
+    color: #ff4301; }
 
 .header {
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.4);
