--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -6443,3 +6443,18 @@ label.panel-block {
   margin-top: 20px;
   align-items: center;
   flex-direction: column; }
+
+.card {
+  display: flex;
+  align-items: center; }
+  .card .card-votes {
+    width: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 10px; }
+    .card .card-votes i {
+      cursor: pointer; }
+  .card .card-content {
+    width: calc(100% - 30px);
+    padding-left: calc(1.5rem - 10px); }
