--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -50,3 +50,25 @@ $link: $readble;
   align-items: center;
   flex-direction: column;
 }
+
+.card {
+  display: flex;
+  align-items: center;
+
+  .card-votes {
+    width: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 10px;
+
+    i {
+      cursor: pointer;
+    }
+  }
+
+  .card-content {
+    width: calc(100% - 30px);
+    padding-left: calc(1.5rem - 10px);
+  }
+}
