--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -6464,3 +6464,20 @@ label.panel-block {
 
 .mr-5 {
   margin-right: 5px; }
+
+.loading {
+  display: flex;
+  justify-content: center; }
+  .loading .loader {
+    border: 6px solid #f3f3f3;
+    border-top: 6px solid #ff4301;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 2s linear infinite; }
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(360deg); } }
