--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -80,3 +80,26 @@ $link: $readble;
 .mr-5 {
   margin-right: 5px;
 }
+
+.loading {
+  display: flex;
+  justify-content: center;
+
+  .loader {
+    border: 6px solid #f3f3f3;
+    border-top: 6px solid $primary;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 2s linear infinite;
+  }
+
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+}
